k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cinematrix
  labels:
    name: cinematrix
    environment: production
    app: movie-platform
